--- a/HELPSMobileFrontEnd/Resources/layout/Course.axml
+++ b/HELPSMobileFrontEnd/Resources/layout/Course.axml
@@ -113,15 +113,13 @@
             android:id="@+id/lblYear"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content" />
-        <Spinner
-            android:layout_width="154.3dp"
-            android:textAppearance="?android:attr/textAppearanceMedium"
-            android:textColor="#000000"
-            android:layout_height="25dp"
-            android:layout_marginTop="15dp"
-            android:layout_marginRight="25dp"
-            android:layout_toRightOf="@+id/year"
-            android:background="#fafafa"
-            android:id="@+id/ddlYear" />
     </RelativeLayout>
+    <Spinner
+        android:textAppearance="?android:attr/textAppearanceMedium"
+        android:textColor="#000000"
+        android:background="#fafafa"
+        android:id="@+id/ddlYear"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_margin="10dp" />
 </LinearLayout>
