--- a/HELPSMobileFrontEnd/Resources/layout/Profile.axml
+++ b/HELPSMobileFrontEnd/Resources/layout/Profile.axml
@@ -116,6 +116,17 @@
             android:layout_marginLeft="20.0dp"
             android:layout_marginRight="25.0dp"
             android:layout_alignParentRight="true" />
+        <RadioButton
+            android:text="Unspecified"
+            android:textStyle="bold"
+            android:textAppearance="?android:attr/textAppearanceMedium"
+            android:textColor="#000000"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/rbUnspecified"
+            android:layout_marginLeft="20.0dp"
+            android:layout_marginRight="25.0dp"
+            android:layout_alignParentRight="true" />
     </RadioGroup>
     <TextView
         android:text="Status"
