--- a/HELPSMobileFrontEnd/Resources/layout/SlidingFragmentLayout.axml
+++ b/HELPSMobileFrontEnd/Resources/layout/SlidingFragmentLayout.axml
@@ -19,7 +19,9 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:id="@+id/flButtonSave"
-        android:layout_gravity="bottom">
+        android:layout_gravity="bottom"
+        xmlns:tools="http://schemas.android.com/tools"
+        tools:visibility="visible">
         <Button
             android:text="Save"
             android:layout_width="match_parent"
@@ -27,6 +29,7 @@
             android:id="@+id/btnSave"
             android:layout_gravity="bottom"
             android:background="#ff1976d2"
-            android:textColor="#ffffffff" />
+            android:textColor="#ffffffff"
+            tools:visibility="gone" />
     </FrameLayout>
 </LinearLayout>
